sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: illegal start of simple pattern
      var case=getValeur(i)
          ^AlgBubbleSort1:16: error: '=' expected but '}' found.
    }
    ^