sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
  for(i<-0 to (getNombreValeurs()-2)) 
  //on prend chaque élément de la liste pour le remonter
  	{
      var case=getValeur(i)
      var etape=0
      while(getValeur(i)==case)
      	{
          if (plusPetit(getValeur(j),getValeur(i)))
      			{
          		echange(i,j)
        		}
        }
		}
}